--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.4",
+    "password-validator": "^5.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
